--- a/WEB.csproj
+++ b/WEB.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Controllers\CitizenController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\OfficerController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -153,6 +154,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\vue.config.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -173,9 +175,13 @@
     <Content Include="Views\Login\Login.cshtml" />
     <Content Include="Views\Shared\_LoginLayoutPage.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
+    <Content Include="Views\Citizen\Qualification.cshtml" />
+    <Content Include="Views\Officer\CitizenDetails.cshtml" />
+    <Content Include="Views\Officer\Citizens.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Cors\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
